--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@ p {
   align-items: center;
   margin: 0;
   width: 100%;
+  background-image: linear-gradient(291deg, #25233bab, #d5cbcb66);
 }
 .block {
   overflow: hidden;
@@ -25,7 +26,7 @@ p {
   height: 19vh;
   max-width: 500px;
   display: flex;
-  border: solid 2px blue;
+  border: solid 2px #807683de;
   /* justify-content: center; */
 }
 #blk1 {
