--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 p {
   text-align: center;
   font-size: 4.5vh;
@@ -8,11 +13,16 @@ p {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: flex-start;
   margin: 0;
   width: 100%;
   height: 97vh;
-  background-image: radial-gradient(circle, #9b94e7ab, #6d849b66);
+  background-image: radial-gradient(circle, #9997afab, #6d849b66),
+    url("../asset/images/skyline.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding-top: 18px;
 }
 
 .inner-block {
@@ -30,10 +40,15 @@ img {
 
 .block {
   color: rgb(24, 22, 22);
-  height: 29vh;
-  width: 22vw;
+  height: 21vh;
+  width: 18vw;
+  transition: transform 0.2s ease-in-out;
   /* max-width: 500px; */
   /* display: flex; */
   /* border: solid 2px #807683de; */
   /* justify-content: center; */
+}
+
+.block:hover {
+  transform: scale(1.06);
 }
